Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Done
-
Impala 2.10.0
-
None
-
ghx-label-7
Description
Forking processes from the Impala daemon after startup is problematic because of the spike in virtual memory it causes (see IMPALA-2294). We should avoid doing this in ProcessStateInfo::ReadProcFileDescriptorInfo(), which is invoked from the web server debug pages.
Attachments
Issue Links
- is duplicated by
-
IMPALA-5735 Avoid fork() in ProcessStateInfo
- Resolved