IMPALA-5624: Replace "ls -l" with opendir() in ProcessStateInfo

Running shell commands from impalad can be problematic, because using popen() leads
to forking which causes a spike in virtual memory. To avoid this, "ls" is replaced
with POSIX API calls.

FileDescriptorMap fd_desc_ was only used to get the number of file descriptors, so
it was unneccesery work to initialize it. It is removed, and only the number of file
descriptors is computed.

The automatic test for this function is only a sanity check,  because there is no
way to know the "expected value" in advance, and the number of file desciptors can
change anytime.

Change-Id: Ibffae8069a62e100abbfa7d558b49040b095ddc0
Reviewed-on: http://gerrit.cloudera.org:8080/8546
Reviewed-by: Lars Volker <lv@cloudera.com>
Tested-by: Impala Public Jenkins