be/src/util/process-state-info.h
@@ -29,7 +29,7 @@ namespace impala {
 /// ProcessStateInfo is an interface to query for process state information
 /// at runtime. This contains information about I/O, Cgroup, Scheduler,
 /// Process status, as well as the file descriptors that belong to the process.
-/// Below are some of the I/O information will be read from /proc/pid/io.
+/// Below are some of the I/O information will be read from /proc/self/io.
 /// io/rchar[int64]: Number of bytes which this task has caused to be read from storage.
 /// io/wchar[int64]: Number of bytes which this task has caused to be written to storage.
 /// io/syscr[int64]: Number of read I/O operations.
@@ -39,13 +39,13 @@ namespace impala {
 /// io/cancelled_write_bytes[int64]: Number of bytes which this process did not write,
 /// by truncating pagecache.
 
-/// Below are some of the Cgroup information that will be read from /proc/pid/cgroup.
+/// Below are some of the Cgroup information that will be read from /proc/self/cgroup.
 /// cgroup/hierarchy_id[int]: Hierarchy ID number.
 /// cgroup/subsystems[string]: Set of subsystems bound to the hierarchy.
 /// cgroup/control_group[string]: Control group in the hierarchy to which the
 /// process belongs.
 
-/// Below are some of the Scheduler information that will be read from /proc/pid/sched.
+/// Below are some of the Scheduler information that will be read from /proc/self/sched.
 /// sched/se.sum_exec_runtime[string]: Sum of execute time.
 /// sched/se.statistics.wait_max[string]: Max wait time in ready queue.
 /// sched/se.statistics.wait_sum[string]: Sum of wait time in ready queue.
@@ -58,7 +58,8 @@ namespace impala {
 /// sched/nr_involuntary_switches[int]: Number of involuntary context switches.
 /// sched/prio[int]: The process priority.
 
-/// Below are some of the Process status information that will be read from /proc/pid/status.
+/// Below are some of the Process status information that will be read
+/// from /proc/self/status.
 /// status/Threads[int]: Number of threads in process.
 /// status/VmPeak[string]: Peak virtual memory size.
 /// status/VmSize[string]: Virtual memory size.
@@ -74,9 +75,8 @@ namespace impala {
 /// status/Cpus_allowed_list[string]: List of CPUs on which this process may run.
 /// status/Mems_allowed_list[string]: Memory nodes allowed to this process.
 
-/// File Descriptors information will be read from /proc/pid/fd.
-/// The number of files the process has open.
-/// The description info for each file.
+/// File Descriptors information will be read from /proc/self/fd.
+/// fd/count[int]: The number of files the process has open.
 
 class ProcessStateInfo {
  public:
@@ -96,24 +96,20 @@ class ProcessStateInfo {
   typedef std::map<std::string, std::string> ProcessStateMap;
   ProcessStateMap process_state_map_;
 
-  /// The description info for each file.
-  typedef std::map<int, std::string> FileDescriptorMap;
-  FileDescriptorMap fd_desc_;
-
-  /// Read I/O info from /proc/<pid>/io.
+  /// Read I/O info from /proc/self/io.
   void ReadProcIO();
 
-  /// Read cgroup info from /proc/<pid>/cgroup.
+  /// Read cgroup info from /proc/self/cgroup.
   void ReadProcCgroup();
 
-  /// Read schedule info from /proc/<pid>/sched.
+  /// Read schedule info from /proc/self/sched.
   void ReadProcSched();
 
-  /// Read status from /proc/<pid>/status.
+  /// Read status from /proc/self/status.
   void ReadProcStatus();
 
-  /// Read file descriptors belong the process from /proc/<pid>/fd.
-  void ReadProcFileDescriptorInfo();
+  /// Read the number of currently open file descriptors from /proc/self/fd.
+  void ReadProcFileDescriptorCount();
 };
 
 }
